--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,12 @@
 {
     "files.watcherExclude": {
         "**/.venv/**": true
+    },
+    "files.associations": {
+        "signalfd.h": "c",
+        "signal.h": "c",
+        "sigset_t.h": "c",
+        "sig_atomic_t.h": "c",
+        "sigaction.h": "c"
     }
 }
